--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       <div class="row-across">
         <a href="#">www.BlazRobar.com</a>
         <div class="chevron">
-          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
         <p>I'm like the Robin Hood of PSD files.</p>
       </div>
       <div class="cta-arrow">
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        <a href="#"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
       </div>
     </section>
 
