Fixed responsive and validated HTML/CSS

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 
   <section class="banner">
     <div class="banner-wrapper">
-      <h1>Awesome Free PSD <br>Templates & Resources</h1>
+      <h1>Awesome Free PSD <br>Templates &amp; Resources</h1>
       <div class="row-across">
         <a href="#">www.BlazRobar.com</a>
         <div class="chevron">
