--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Go Blaz!</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/print.css">
